# parcae

./: CMakeCompileOptions.txt  CMakeDoc.txt  CMakeLists.txt  Doxyfile  LICENSE  README.en  README.ru
example/: CMakeLists.txt  main.cpp
parcae/: CMakeLists.txt  node.h  parcae.h  types.h
